# weightmatrix

./: .dockerignore  .gitignore  Dockerfile  README.md  plot_perfs.ipynb  pyproject.toml  requirements.txt  runner.sh  test_planes_list.parquet
.github/workflows/: ci.yml
Geometries/: Blake_Fibre_u.pickle  Blake_Fibre_v.pickle  Blake_Fibre_x.pickle  Blake_Pixel_x.pickle  FTDR_Fibre_u.pickle  FTDR_Fibre_v.pickle  FTDR_Fibre_x.pickle  FTDR_Pixel_x.pickle  Frugal_Fibre_u.pickle  Frugal_Fibre_v.pickle  Frugal_Fibre_x.pickle  Frugal_Pixel_x.pickle  Modest_Fibre_u.pickle  Modest_Fibre_v.pickle  Modest_Fibre_x.pickle  Modest_Pixel_x.pickle  SciFi_u.pickle  SciFi_v.pickle  SciFi_x.pickle  UT_U2.pickle  UT_U2_BorderLess.pickle  UTaU.pickle  UTaX.pickle  UTbV.pickle  UTbX.pickle  VeloClose.pickle  VeloLeft.pickle  VeloLeftOpen.pickle  VeloOpen.pickle  VeloRight.pickle  VeloRightOpen.pickle
detector/collectionplanes/: collectingplanes.csv
detector/downstream/: blake_shape.ipynb  down.csv  down_proto_v00.03.csv  down_scenario_Johanes_212.csv  down_scenario_Renato_302_T3RIch.csv  (+1 more)
docs/: ARCHITECTURE.md  CODE_MAP.md  OUTPUT_WRITER.md  REFACTOR_PLAN.md  TODO_ROADMAP.md  momentum_resolution_pipeline.md
layouts/: u2_baseline.yaml  u2_debug_material.yaml  u2_uli.yaml
notebooks/: momentum_resolution_quicklook.ipynb
samples/: bsmumu_rdf.parquet  get_bsmumu.py  kaons_B2Kmumu.parquet
tests/: __init__.py  test_bfield.py  test_material.py  test_matrix.py  test_predictor.py  test_smoke_100_events.py
weightmatrix/: __init__.py  bfield.py  material.py  matrix.py  predictor.py
(+66 files in other folders)
